Updating YML file and navigation

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -77,7 +77,21 @@
                 <h1 id="about">About</h1>
 <p>This is a practice site for MKDocs learning and training.</p>
 <h2 id="second-heading">Second Heading</h2>
-<p>This is more text under another heading. </p>
+<p>This is more text under another heading. This is a test commit.</p>
+<table>
+  <tr>
+   <td>Table
+   </td>
+   <td>Data
+   </td>
+  </tr>
+  <tr>
+   <td>One
+   </td>
+   <td>Some stuff
+   </td>
+  </tr>
+</table>
               
             </div>
           </div><footer>
