--- a/site/index.html
+++ b/site/index.html
@@ -76,7 +76,7 @@
           <div role="main" class="document" itemscope="itemscope" itemtype="http://schema.org/Article">
             <div class="section" itemprop="articleBody">
               
-                <h1 id="welcome-to-mklorum">Welcome to MkLorum</h1>
+                <h1 id="welcome-to-my-mkdocs-practice-project">Welcome to My MKdocs Practice Project</h1>
 <p>For full documentation visit <a href="https://www.mkdocs.org">mkdocs.org</a>.</p>
 <h2 id="commands">Commands</h2>
 <ul>
@@ -91,6 +91,9 @@ docs/
     index.md  # The documentation homepage.
     ...       # Other markdown pages, images and other files.
 </code></pre>
+<blockquote>
+<p>Note: This is my practice project.</p>
+</blockquote>
               
             </div>
           </div><footer>
@@ -139,5 +142,5 @@ docs/
 
 <!--
 MkDocs version : 1.5.3
-Build Date UTC : 2023-10-23 21:36:09.337510+00:00
+Build Date UTC : 2024-04-05 01:24:59.210716+00:00
 -->
